fix(templates/rust): Ignore `Cargo.lock` in library crates

--- a/templates/rust/cargo-generate.toml
+++ b/templates/rust/cargo-generate.toml
@@ -6,6 +6,7 @@ default = true
 [conditional.'crate_type == "bin"']
 ignore = [
     "src/lib.rs",
+    "Cargo.lock"
 ]
 
 [conditional.'crate_type == "lib"']
