ci: Exclude SSH public key files from `typos` spellchecking

--- a/.typos.toml
+++ b/.typos.toml
@@ -4,5 +4,6 @@ nitch = "nitch"
 
 [files]
 extend-exclude = [
-    "lib/secrets.yaml" # Don't spellcheck AES.
+    "lib/secrets.yaml", # Don't spellcheck AES.
+    "*.pub"             # And don't spellcheck ED25519.
 ]
