--- a/templates/rust/Cargo.toml
+++ b/templates/rust/Cargo.toml
@@ -8,11 +8,11 @@ authors = ["{{authors}}"]
 unsafe_code = "forbid"
 
 [lints.clippy]
-pedantic = "deny"
-nursery = "deny"
-complexity = "deny"
-perf = "deny"
-enum_glob_use = { level = "deny", priority = 1 }
+pedantic = "warn"
+nursery = "warn"
+complexity = "warn"
+perf = "warn"
+enum_glob_use = { level = "warn", priority = 1 }
 single_match_else = { level = "allow", priority = 1 }
 option_if_let_else = { level = "allow", priority = 1 }
 or_fun_call = { level = "allow", priority = 1 }
