--- a/templates/rust/Cargo.toml
+++ b/templates/rust/Cargo.toml
@@ -3,6 +3,7 @@ name = "{{project-name}}"
 version = "0.1.0"
 edition = "2021"
 authors = ["{{authors}}"]
+description = "{{description}}"
 
 # NOTE: Generated, no unsafe by default.
 #
