fix(templates/rust): Remove default value for `description` placeholder

--- a/templates/rust/cargo-generate.toml
+++ b/templates/rust/cargo-generate.toml
@@ -5,8 +5,7 @@ default = true
 
 [placeholders.description]
 type = "string"
-prompt = "Provide a description:"
-default = ""
+prompt = "Provide a description"
 
 [conditional.'crate_type == "bin"']
 ignore = [
