fix(templates/rust): Do not generate `*.lock` files, tweak derivation

--- a/templates/rust/cargo-generate.toml
+++ b/templates/rust/cargo-generate.toml
@@ -1,3 +1,9 @@
+[template]
+ignore = [
+    "flake.lock",
+    "Cargo.lock",
+]
+
 [placeholders.nix]
 type = "bool"
 prompt = "Set up a Nix flake?"
