ci: Make `typos` aware of the `.typ` Typst extension

--- a/.typos.toml
+++ b/.typos.toml
@@ -3,6 +3,7 @@ ba = "ba"         # Catppuccin's #F38BA8 color code
 nitch = "nitch"   # A system fetch tool in Nim.
 GOST = "GOST"     # ГОСТ, a standard.
 numver = "numver" # A variable from Starship.
+typ = "typ"       # Typst stuff.
 
 [files]
 extend-exclude = [
